--- a/css/tomc-reports-styles.css
+++ b/css/tomc-reports-styles.css
@@ -4,3 +4,11 @@
     display: block;
     margin: 0px auto 20px auto;
 }
+.tomc-report--result-section table{
+    border: 2px solid #4c0548 !important;
+    width: 95%;
+    margin: 20px auto;
+}
+.tomc-report--result-section td, .tomc-report--result-section th{
+    border: 2px solid #4c0548 !important;
+}
