--- a/css/tomc-reports-styles.css
+++ b/css/tomc-reports-styles.css
@@ -3,6 +3,7 @@
     border-radius: 20px;
     display: block;
     margin: 0px auto 20px auto;
+    cursor: pointer;
 }
 .tomc-report--result-section table{
     border: 2px solid #4c0548 !important;
