--- a/css/tomc-reports-styles.css
+++ b/css/tomc-reports-styles.css
@@ -7,6 +7,7 @@
 }
 .tomc-report--result-section table{
     border: 2px solid #4c0548 !important;
+    border-collapse: collapse;
     width: 95%;
     margin: 20px auto;
 }
