--- a/css/tomc-reports-styles.css
+++ b/css/tomc-reports-styles.css
@@ -11,6 +11,7 @@
 }
 .tomc-report--result-section td, .tomc-report--result-section th{
     border: 2px solid #4c0548 !important;
+    text-align: center !important;
 }
 #tomc-payout-report--generate-button {
     background: #4c0548;
